--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anudeep-kolluri.github.io/",
+  "homepage": "https://anudeep-kolluri.github.io/personal-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
